css/index.css
/* Defaults */
:root {
  --font-family: -apple-system, system-ui, sans-serif;
  --font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New, Courier, monospace;
}

/* Theme colors */
:root {
  --color-gray-20: #e0e0e0;
  --color-gray-50: #C0C0C0;
  --color-gray-90: #333;

  --background-color: #fff;

  --text-color: #333;
  --text-color-link: #082840;
  --text-color-link-visited: #17050F;
  --text-color-strong: rgb(255, 132, 0);
  --text-color-em: rgb(146, 75, 0);
}

:root .dark-mode {
  /* dark mode variables */
  --color-gray-20: #e0e0e0;
  --color-gray-50: #C0C0C0;
  --color-gray-90: #dad8d8;
  --text-color-strong: rgb(255, 132, 0);
  --text-color-em: rgb(255, 188, 117);

  /* --text-color is assigned to --color-gray-_ above */
  --text-color-link: rgba(255, 255, 255, 0.84);
  --text-color-link-visited: rgba(255, 255, 255, 0.84);
  --text-color: #dad8d8;
  --background-color: #1d1e20;
}

/* Global stylesheet */
* {
  box-sizing: border-box;
}

html,
body {
  padding: 0;
  margin: 0;
}

body {
  font-family: var(--font-family);
  color: var(--text-color);
  background-color: var(--background-color);
  overscroll-behavior-y: none;
}

p:last-child {
  margin-bottom: 0;
}
p,
.tmpl-post li,
img {
  max-width: 37.5em; /* 600px /16 */
}
p,
.tmpl-post li {
  line-height: 1.45;
}

a[href] {
  color: var(--text-color-link);
}
a[href]:visited {
  color: var(--text-color-link-visited);
}

main {
  padding: 1rem;
}
main :first-child {
  margin-top: 0;
}
header {
  border-bottom: 1px dashed var(--color-gray-20);
}
header:after {
  content: "";
  display: table;
  clear: both;
}

table {
  margin: 1em 0;
  border-collapse: collapse;
}
table td,
table th {
  border: 1px solid var(--text-color);
  padding: 3px 1em 3px 3px;
}

pre,
code {
  font-family: var(--font-family-monospace);
  line-height: 1.5;
}
pre {
  font-size: 14px;
  line-height: 1.375;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  -moz-tab-size: 2;
  -o-tab-size: 2;
  tab-size: 2;
  -webkit-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
  padding: 1em;
  margin: .5em 0;
  background-color: #f6f6f6;
}
code {
  word-break: break-all;
}

/* Header */
.home {
  padding: 0 1rem;
  float: left;
  margin: 1rem 0; /* 16px /16 */
  font-size: 1em; /* 16px /16 */
}
.home :link:not(:hover) {
  text-decoration: none;
}

/* Nav */
.nav {
  padding: 0;
  list-style: none;
  float: left;
  margin-left: 1em;
}
.nav-item {
  display: inline-block;
  margin-right: 1em;
}
.nav-item a[href]:not(:hover) {
  text-decoration: none;
}
.nav-item-active {
  font-weight: 700;
  text-decoration: underline;
}

/* Posts list */
.postlist {
  list-style: none;
  padding: 0;
}
.postlist-item {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  counter-increment: start-from -1;
  line-height: 1.8;
}
.postlist-item:before {
  display: inline-block;
  pointer-events: none;
  content: "" counter(start-from, decimal-leading-zero) ". ";
  line-height: 100%;
  text-align: right;
}
.postlist-date,
.postlist-item:before {
  font-size: 0.8125em; /* 13px /16 */
  color: var(--color-gray-90);
}
.postlist-date {
  word-spacing: -0.5px;
}
.postlist-link {
  padding-left: .25em;
  padding-right: .25em;
  text-underline-position: from-font;
  text-underline-offset: 0;
  text-decoration-thickness: 1px;
}
.postlist-item-active .postlist-link {
  font-weight: bold;
}
.tmpl-home .postlist-link {
  font-size: 1.1875em; /* 19px /16 */
  font-weight: 700;
}


/* Tags */
.post-tag {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  text-transform: uppercase;
  font-size: 0.75em; /* 12px /16 */
  padding: 0.08333333333333em 0.3333333333333em; /* 1px 4px /12 */
  margin-left: 0.6666666666667em; /* 8px /12 */
  margin-top: 0.5em; /* 6px /12 */
  margin-bottom: 0.5em; /* 6px /12 */
  color: var(--color-gray-90);
  border: 1px solid var(--color-gray-50);
  border-radius: 0.25em; /* 3px /12 */
  text-decoration: none;
  line-height: 1.8;
}
a[href].post-tag,
a[href].post-tag:visited {
  color: inherit;
}
a[href].post-tag:hover,
a[href].post-tag:focus {
  background-color: var(--color-gray-20);
}
.postlist-item > .post-tag {
  align-self: center;
}

/* Infobox */
:root {
  --color-infobox: #ffc;
}
:root .dark-mode {
  --color-infobox: #082840;
}

.infobox {
  background-color: var(--color-infobox);
  color: var(--color-gray-90);
  padding: 1em 0.625em; /* 16px 10px /16 */
}
.infobox ol:only-child {
  margin: 0;
}

/* Direct Links / Markdown Headers */
.direct-link {
  font-family: sans-serif;
  text-decoration: none;
  font-style: normal;
  margin-left: .1em;
}
a[href].direct-link,
a[href].direct-link:visited {
  color: transparent;
}
a[href].direct-link:focus,
a[href].direct-link:focus:visited,
:hover > a[href].direct-link,
:hover > a[href].direct-link:visited {
  color: #aaa;
}

strong {
  color: var(--text-color-strong)
}

em, code {
  color: var(--text-color-em)
}

blockquote {
  margin: 20px 0;
  padding: 0 14px;
  border-inline-start: 3px solid var(--color-gray-20);
}

#color-scheme-toggle {
  height: 15px;
}

